// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/Button Block 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
  width: 100%;
}

.c0:hover {
  color: #6D6E70;
  background-color: #FFF;
}

<button
  className="c0"
  type="button"
>
  Block
</button>
`;

exports[`Storyshots Buttons/Button Outline 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  background-color: #6D6E70;
  color: #FFF;
}

<button
  className="c0"
  type="button"
>
  Outline
</button>
`;

exports[`Storyshots Buttons/Button Primary 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  color: #6D6E70;
  background-color: #FFF;
}

<button
  className="c0"
  data-testid="primary-button"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Buttons/Button Primary Inverted 1`] = `
.c1 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background: transparent;
  color: #FFF;
  border: 1px solid #FFF;
}

.c1:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <button
      className="c1"
      type="button"
    >
      Primary inverted
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons/Button Small 1`] = `
.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 14px;
  padding: 0px 26px;
  height: 30px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  background-color: #6D6E70;
  color: #FFF;
}

<button
  className="c0"
  size="small"
  type="button"
>
  Small
</button>
`;

exports[`Storyshots Buttons/Button With Right Icon 1`] = `
.c1 {
  display: inline-block;
  height: 26px;
  width: 26px;
  color: inherit;
}

.c1 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c2 {
  margin-left: 12px;
  display: inline;
}

.c0 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c0:hover {
  background-color: #6D6E70;
  color: #FFF;
}

<button
  className="c0"
  type="button"
>
  Download catalog
  <span
    className="c1 c2"
    color="inherit"
    size="26px"
  >
    <svg
      viewBox="0 0 50 50"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <defs>
        <path
          d="M0 0h48v14.511H0z"
        />
      </defs>
      <g
        fill="none"
        fillRule="evenodd"
      >
        <g
          transform="translate(1 34.489)"
        >
          <path
            d="M46.326 0a1.675 1.675 0 0 0-1.675 1.674v6.698a2.796 2.796 0 0 1-2.79 2.79H6.139a2.796 2.796 0 0 1-2.79-2.79V1.674a1.674 1.674 0 1 0-3.349 0v6.698a6.145 6.145 0 0 0 6.14 6.14h35.72A6.145 6.145 0 0 0 48 8.371V1.674A1.674 1.674 0 0 0 46.326 0Z"
            fill="currentColor"
          />
        </g>
        <path
          d="M25 1a1.675 1.675 0 0 0-1.674 1.674v27.684l-10.65-8.877a1.675 1.675 0 0 0-2.143 2.572L23.93 35.216c.081.058.168.109.259.15.066.043.134.082.205.116.388.164.826.164 1.215 0 .07-.034.14-.073.205-.116.091-.041.178-.092.259-.15l13.395-11.163a1.674 1.674 0 0 0-2.143-2.572l-10.65 8.877V2.674A1.674 1.674 0 0 0 25 1Z"
          fill="currentColor"
        />
      </g>
    </svg>
  </span>
</button>
`;
